[package]
name = "zerotier-api"
edition = "2018"
version = "0.1.1"

authors = ["zo-el <joelulahanna@gmail.com>"]
description = "Library for interfacing with ZeroTier"
license = "Apache-2.0"
repository = "https://github.com/zo-el/zerotier-rs"

[dependencies]
arrayref = "0.3.5"
byteorder = "1.1.0"
ed25519-dalek = "1.0.1"
failure = "0.1.5"
hex = "0.4.0"
salsa20 = "0.5.0"
serde = { version = "1", features = ["derive"] }
sha2 = "0.8.0"
x25519-dalek = "0.5.2"
