[package]
name = "zerotier"
edition = "2018"
version = "0.1.0"

authors = ["Yegor Timoshenko <yegortimoshenko@riseup.net>"]
description = "Library for interfacing with ZeroTier"
license = "Apache-2.0"
repository = "https://github.com/transumption/zerotier-rust"

[dependencies]
arrayref = "0.3.5"
byteorder = "1.1.0"
ed25519-dalek = "1.0.1"
failure = "0.1.5"
hex = "0.4.0"
salsa20 = "0.10.2"
serde = { version = "1", features = ["derive"] }
sha2 = "0.10.2"
x25519-dalek = "1.2.0"
generic-array = "0.14.4"
